Fix: Make category selector border align with navbar

--- a/src/components/styles/navbar.scss
+++ b/src/components/styles/navbar.scss
@@ -26,7 +26,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 120%;
+    line-height: 80px;
     transition: border-bottom .15s ease-out
 }
 
@@ -34,7 +34,7 @@
     font-weight: 600;
     color: #5ECE7B;
     border-bottom: 2px solid #5ECE7B;
-    padding-bottom: 16px;
+    padding-bottom: 29px;
 }
 
 
